--- a/.env
+++ b/.env
@@ -9,11 +9,11 @@ LOG_DEPRECATIONS_CHANNEL=null
 LOG_LEVEL=debug
 
 DB_CONNECTION=mysql
-DB_HOST=127.0.0.1
+DB_HOST=bxyonewrtsehuok7pttt-mysql.services.clever-cloud.com
 DB_PORT=3306
-DB_DATABASE=laravel
-DB_USERNAME=root
-DB_PASSWORD=
+DB_DATABASE=bxyonewrtsehuok7pttt
+DB_USERNAME=uvgeqwejdnebq1sp
+DB_PASSWORD=BPcX6oMGWNInx0nKQv8P
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
