--- a/public/plugins/ckeditor5v1/package.json
+++ b/public/plugins/ckeditor5v1/package.json
@@ -17,7 +17,8 @@
     "@ckeditor/ckeditor5-list": "41.1.0",
     "@ckeditor/ckeditor5-paragraph": "41.1.0",
     "@ckeditor/ckeditor5-special-characters": "41.1.0",
-    "@ckeditor/ckeditor5-undo": "41.1.0"
+    "@ckeditor/ckeditor5-undo": "41.1.0",
+    "ckeditor5-custom-build": "file:"
   },
   "devDependencies": {
     "@ckeditor/ckeditor5-core": "41.1.0",
